# ChessFor2

./: .gitignore  CMakeLists.txt  ClassDiagram.wsd  README.md
ChessFor2/: BaseUserIO.h  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessFor2.cpp  ChessFor2.h  GameAnalyzer.cpp  GameAnalyzer.h  GameResult.h  GameTurn.cpp  GameTurn.h  Gui.cpp  Gui.h  GuiInput.cpp  GuiInput.h  GuiInputHelper.h  GuiRenderHelper.cpp  GuiRenderHelper.h  GuiRenderer.cpp  GuiRenderer.h  IUserIO.h  Piece.cpp  Piece.h  PieceColor.h  PieceType.h  PlayerId.h  Position.cpp  Position.h  Tile.cpp  Tile.h  TileStatus.h  config.h.in  main.cpp
ChessFor2/gui/: BaseGui.cpp  BaseGui.h  GameModeSelector.cpp  GameModeSelector.h  Gui.cpp  Gui.h  GuiInputHelper.cpp  GuiInputHelper.h  GuiRenderHelper.cpp  GuiRenderHelper.h  LocalGui.cpp  LocalGui.h  NetworkGui.cpp  NetworkGui.h  PieceImgLoader.cpp  PieceImgLoader.h
ChessFor2/net/: NetCfg.cpp  NetCfg.h  NetworkIoHelper.cpp  NetworkIoHelper.h
ChessFor2/pieces/: Bishop.cpp  Bishop.h  Horse.cpp  Horse.h  King.cpp  King.h  LinearMovingPiece.cpp  LinearMovingPiece.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  PieceColor.h  PieceType.h  Queen.cpp  Queen.h  Tower.cpp  Tower.h
